Fix header and feature display issues on IE11.
- IE11 overlapping media block content w/ `flex-direction: column`
- Use flexbox for buttons display issues in IE

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -1472,6 +1472,12 @@ code {
     .usa-media-block {
       @include at-media("desktop") {
         @include u-flex("column");
+
+        // IE11 overlap issue.
+        &__body {
+          width: 100%;
+          flex: 0 0 auto;
+        }
       }
     }
 
@@ -2321,6 +2327,14 @@ h6 + div:not(.usa-accordion__content) {
       @include at-media("desktop") {
         display: inherit;
       }
+    }
+  }
+
+  // Read website standards, Download, Github buttons
+  .buttons {
+    @include at-media("desktop") {
+      display: flex;
+      align-items: center;
     }
   }
 }
